Add JWT generator

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "Default": "Data source=datingapp.db"
   },
+  "TokenKey": "this is a secret and difficult to guess key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
